Liste des hotels page d'acueil

--- a/public/views/layout.twig
+++ b/public/views/layout.twig
@@ -23,7 +23,7 @@
 		<nav>
 			<ul class="flex">
 				<li><a href="{{ url('home') }}">Page d'accueil</a></li>
-				<li><a href="{{ url('signup') }}">Créer un compte</a></li>
+				<li><a href="#">Créer un compte</a></li>
 				<li><a href="#">Connexion</a></li>
 				<li><a href="#">Admin</a></li>
 				<li><a href="{{ url('contact') }}">Contact</a></li>
