--- a/public/views/home.twig
+++ b/public/views/home.twig
@@ -2,6 +2,17 @@
 {% extends 'layout.twig' %}
 
 {% block body %}
-Bienvenue sur la page d'accueil
+<h1> Bienvenue sur la page d'accueil</h1>
+	{% for ligne in hotels %}
+	<ul>
+		<li><h3>{{ ligne.Name }}</h3></li>
+		<li><strong> Tél :</strong> {{ ligne.Phone }}</li>
+		<li><strong> Adresse :</strong> {{ ligne.Address }}</li>
+		<li><strong> Ville :</strong> {{ ligne.City }}</li>
+		<li><strong>Pays : </strong>{{ ligne.Country }}</li>
+		<li><strong>Nombre de Chambre :</strong> <br>{{ ligne.Nb_Rooms }}</li>
+		
 
+	</ul>
+	{% endfor %}
 {% endblock %}
