--- a/public/views/layout.twig
+++ b/public/views/layout.twig
@@ -24,7 +24,7 @@
 			<ul class="flex">
 				<li><a href="{{ url('home') }}">Page d'accueil</a></li>
 				<li><a href="{{ url('signup') }}">Créer un compte</a></li>
-				<li><a href="#">Connexion</a></li>
+				<li><a href="{{ url('login') }}">Connexion</a></li>
 				<li><a href="#">Admin</a></li>
 				<li><a href="{{ url('contact') }}">Contact</a></li>
 			</ul>
