--- a/public/views/contact.twig
+++ b/public/views/contact.twig
@@ -3,7 +3,8 @@
 {% if firstname is defined and lastname is defined %} 
     <strong>Hello</strong> {{ firstname }} {{ lastname }} !
 {% else %}
-	<h1>Formulaire de test</h1>
+<main>
+	<h2>Contact</h2>
 	<form action="" method="post">
 		<fieldset>
 			<legend>Contact</legend>
@@ -19,10 +20,11 @@
 				</li>
 
 				<li>
-					<input type="submit" value="Envoyer" />
+					<input type="submit" value="Envoyer" class="btn" />
 				</li>
 				</ul>
 		</fieldset>
    </form>
+ </main>
 {% endif %}
 {% endblock %}
