--- a/public/views/layout.twig
+++ b/public/views/layout.twig
@@ -13,7 +13,7 @@
 	<!-- Feuilles de style -->
 	{% block stylesheets %}
 	<!--	<link rel="stylesheet" href="{{ asset('css/normalize.css') }}">-->
-		<link rel="stylesheet" href="{{ asset('views/css/style.css') }}">
+		<link rel="stylesheet" href="{{ asset('style.css', 'css') }}">
 	{% endblock %}
 </head>
 <body>
@@ -22,8 +22,6 @@
 		<!-- Navigation -->
 		<nav>
 			<ul class="flex">
-				<li><a href="{{ url('home') }}">Page d'accueil</a></li>
-				
 				<li><a href="{{ url('signup') }}">Créer un compte</a></li>
 				<li><a href="{{ url('login') }}">Connexion</a></li>
 				<li><a href="#">Admin</a></li>
@@ -33,17 +31,16 @@
 		
 		<!-- Logo et slogan -->
 		<div class="center">
-			<h1>Gostel</h1>
+			<h1><a href="{{ url('home') }}">Gostel</a></h1>
 			<p>Réservez dans les meilleurs hôtels</p>
 			
 			<!-- Bouton rechercher -->
 			<form action="">
 				<input type="search" id="search" name="search" placeholder="Pays, Ville">
-				<button id="btn_search">Rechercher</button>
+				<button class="btn btn_search">Rechercher</button>
 			</form>
 		
 		</div>
-		
 	</header>
 	
 	{% block body %}{% endblock %}
